--- a/app/src/main/res/layout/activity_other_path.xml
+++ b/app/src/main/res/layout/activity_other_path.xml
@@ -16,7 +16,7 @@
 
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/editSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="5"
